# gamearch-final

./: CMakeLists.txt  README.md  README.txt
shaders/: base.fs  base.vs  emitter.fs  emitter.vs
src/: final.cpp  main.cpp  model.cpp  model.h
src/emitter/: controller_functions.cpp  controller_functions.h  emitter.cpp  emitter.h  particle.cpp  particle.h
src/model/: model.cpp  model.h
src/utils/: utils.cpp  utils.h
